# spatial-db

./: .gitignore  ARCHITECTURE.md  Cargo.toml  Makefile  README.md  basic_functionality_test.go  docker-compose.yaml  go.mod  go.sum  hash_read_test.go  hashserver.txt  inmemory_read_test.go  main.go  ondisk_read_test.go  scaling_test.go  templates_test.go
connector/: handle_game_connection.go  listen_port.go
loading/: load_region.go  load_save.go
paper/: Makefile  document.tex  references.bib  unity-file.drawio
server/: hashserver.go  inmemory_server.go  simple_server.go
src/: main.rs  storage_server.rs
src/simple_server/: server.rs
src/storage/: disk_storage.rs  interface.rs  mod.rs  world.rs
src/tests/: insert_one.rs  mod.rs  performance_testing.rs
storage/: file_cache.go  file_operations.go  hashserver.go  inmemory_server.go  simple_server.go  storage_server.go  unity_file.go  unity_file_test.go
visualization/: visualize.go  visualize_chunk.go
world/: chunk.go  chunk_data.go  data_format.go  indexing_test.go  palette.go  palette_test.go  world_position.go
