[package]
name = "spatial-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow-array = "47.0.0"
axum = "0.6.20"
clap = { version = "4.4.5", features = ["derive"] }
parquet = "47.0.0"
rand = "0.8.5"
serde = { version = "1.0.189", features = ["derive"] }
serde-big-array = "0.5.1"
serde_arrays = "0.1.0"
serde_json = "1.0.107"
serde_with = "3.4.0"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
